[gd_scene load_steps=12 format=3 uid="uid://crtl7yenwrose"]

[ext_resource type="Script" path="res://scripts/window.gd" id="1_yfwui"]
[ext_resource type="Texture2D" uid="uid://c7i37haidl2js" path="res://assets/window.png" id="2_1g8fe"]
[ext_resource type="Texture2D" uid="uid://coydcpfriy4r7" path="res://assets/window broken.png" id="3_07vtk"]
[ext_resource type="Texture2D" uid="uid://b7rxxp5r8vrkr" path="res://assets/1x1.png" id="4_kg0ot"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2b4mf"]
size = Vector2(50, 400)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d7ane"]
size = Vector2(100, 400)

[sub_resource type="Gradient" id="Gradient_ocxgq"]
offsets = PackedFloat32Array(0, 0.959016)
colors = PackedColorArray(0.498334, 0.771071, 0.999998, 1, 0.93, 0.967333, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_0ltb0"]
gradient = SubResource("Gradient_ocxgq")

[sub_resource type="Curve" id="Curve_qan3l"]
max_value = 20.0
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.126667, 20), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_kem4s"]
curve = SubResource("Curve_qan3l")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_metek"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(20, 100, 1)
angle_min = 1.07288e-05
angle_max = 283.9
direction = Vector3(1, -1, 0)
spread = 90.0
initial_velocity_min = 200.0
initial_velocity_max = 1000.0
gravity = Vector3(0, 784, 0)
scale_curve = SubResource("CurveTexture_kem4s")
color_ramp = SubResource("GradientTexture1D_0ltb0")

[node name="window" type="Node2D" groups=["connector"]]
script = ExtResource("1_yfwui")
propegation_rate = 0.2

[node name="WindowClosed" type="Sprite2D" parent="."]
texture = ExtResource("2_1g8fe")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_2b4mf")

[node name="WindowOpen" type="Sprite2D" parent="."]
texture = ExtResource("3_07vtk")

[node name="WindowArea" type="Area2D" parent="." groups=["interaction area"]]
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="WindowArea"]
shape = SubResource("RectangleShape2D_d7ane")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_metek")
texture = ExtResource("4_kg0ot")
lifetime = 0.5
one_shot = true
explosiveness = 1.0

[connection signal="body_entered" from="WindowArea" to="." method="_on_body_entered"]
